EliteMobs 8.1.0 - [New] Added Instanced Dungeons     - Added the instanced_dungeons config folder     - Added the world_blueprints config folder     - Instanced Dungeons take a blueprint world from the config folder, create a copy of it for the duration of an instance and then delete that instanced world     - Instanced dungeons can enforce minimum and maximum player counts for dungeons and require permissions to do the content     - Added the following fields: dungeonName, worldEnvironment, worldName, minimumPlayerCount, maximumPlayerCount, permission, timeMinutes, dungeonObjectives, startLocation, endLocation //todo document better - [New] Added basic boss scripting to boss config files     - Config key is eliteScript, followed by a key identifying the script, followed by the Events, Conditions, Actions and Cooldowns keys. All keys but Actions are MapLists     - Added the following script events: EliteMobDamagedByEliteMobEvent, EliteMobDamagedByPlayerEvent, EliteMobDamagedEvent, EliteMobDeathEvent, EliteMobDamagedEvent, EliteMobDeathEvent, EliteMobEnterCombatEvent, EliteMobExitCombatEvent, EliteMobHealthEvent, EliteMobSpawnEvent, EliteMobTargetPlayerEvent, PlayerDamagedByEliteMobEvent     - Script conditions are currently unimplemented     - Added the following script actions: TELEPORT, MESSAGE and POTION_EFFECT     - Added the following script targets: NEARBY_PLAYERS, WORLD_PLAYER, ALL_PLAYERS, PLAYER     - Added the following script fields: location, range, duration, wait, message, amplifier     - Added the following cooldown fields: local_cooldown, global_cooldown - [New] Regional Bosses with a respawn time of -1 will not respawn - [New] Added elite item disenchantment being disabled by default, configurable - [New] Added the WorldInstanceEvent and WorldUninstanceEvent - [Refactor] Updated syntax from java 8 to java 16 and optimized / refactored / restructured some code
Signed-off-by: MagmaGuy <tiagoarnaut@gmail.com>