@@ -7,15 +7,16 @@ import org.bukkit.entity.EntityType;
 import org.bukkit.inventory.ItemStack;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class WoodLeagueWave15Miniboss extends CustomBossesConfigFields {
-    public WoodLeagueWave15Miniboss(){
+    public WoodLeagueWave15Miniboss() {
         super("wood_league_wave_15_miniboss",
                 EntityType.ZOMBIE,
                 true,
                 "$bossLevel &4Mr. Oinkers",
                 "15");
-        if (!VersionChecker.serverVersionOlderThan(16,0))
+        if (!VersionChecker.serverVersionOlderThan(16, 0))
             setEntityType(EntityType.ZOGLIN);
         setFollowDistance(60);
         setHelmet(new ItemStack(Material.STICK));
@@ -23,6 +24,6 @@ public class WoodLeagueWave15Miniboss extends CustomBossesConfigFields {
         setMovementSpeedAttribute(0.6D);
         setHealthMultiplier(3D);
         setDamageMultiplier(2D);
-        setOnDamagedMessages(Arrays.asList("Oink!?"));
+        setOnDamagedMessages(List.of("Oink!?"));
     }
 }
