@@ -5,10 +5,10 @@ import org.bukkit.Material;
 import org.bukkit.entity.EntityType;
 import org.bukkit.inventory.ItemStack;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class WoodLeagueWave49Healer extends CustomBossesConfigFields {
-    public WoodLeagueWave49Healer(){
+    public WoodLeagueWave49Healer() {
         super("wood_league_wave_49_healer",
                 EntityType.PILLAGER,
                 true,
@@ -16,7 +16,7 @@ public class WoodLeagueWave49Healer extends CustomBossesConfigFields {
                 "49");
         setFollowDistance(60);
         setMainHand(new ItemStack(Material.CROSSBOW));
-        setPowers(Arrays.asList("channel_healing.yml"));
+        setPowers(List.of("channel_healing.yml"));
         setHealthMultiplier(.5D);
     }
 }
