@@ -3,14 +3,14 @@ package com.magmaguy.elitemobs.config.customevents.premade;
 import com.magmaguy.elitemobs.config.customevents.CustomEventsConfigFields;
 import com.magmaguy.elitemobs.events.CustomEvent;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class CharmsGoblinEvent extends CustomEventsConfigFields {
     public CharmsGoblinEvent() {
         super("charms_goblin",
                 true);
         setEventType(CustomEvent.EventType.TIMED);
-        setBossFilenames(Arrays.asList("charms_goblin.yml"));
+        setBossFilenames(List.of("charms_goblin.yml"));
         setLocalCooldown(120D);
         setGlobalCooldown(25D);
         setWeight(50);
