@@ -4,6 +4,7 @@ import com.magmaguy.elitemobs.config.customitems.CustomItemsConfigFields;
 import org.bukkit.Material;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class ElephantCharmConfig extends CustomItemsConfigFields {
     public ElephantCharmConfig() {
@@ -12,7 +13,7 @@ public class ElephantCharmConfig extends CustomItemsConfigFields {
                 Material.ANVIL,
                 "&bElephant Charm",
                 Arrays.asList("&aGain the power of an elephant", "&astampede, for the cost of the", "&aspeed of an elephant stampede!"));
-        setEnchantments(Arrays.asList("VANISHING_CURSE,1"));
+        setEnchantments(List.of("VANISHING_CURSE,1"));
         setPotionEffects(Arrays.asList("INCREASE_DAMAGE,1,self,onHit", "SLOW,3,self,onHit"));
         setDropWeight("1");
     }
