@@ -4,6 +4,7 @@ import com.magmaguy.elitemobs.config.customitems.CustomItemsConfigFields;
 import org.bukkit.Material;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class FireflyCharmConfig extends CustomItemsConfigFields {
     public FireflyCharmConfig() {
@@ -11,8 +12,8 @@ public class FireflyCharmConfig extends CustomItemsConfigFields {
                 true,
                 Material.GLASS_BOTTLE,
                 "&bFirefly Charm",
-                Arrays.asList("&aLight up the night!"));
-        setEnchantments(Arrays.asList("VANISHING_CURSE,1"));
+                List.of("&aLight up the night!"));
+        setEnchantments(List.of("VANISHING_CURSE,1"));
         setPotionEffects(Arrays.asList("NIGHT_VISION,0,self,continuous", "GLOWING,0,target,onHit"));
         setDropWeight("1");
     }
