@@ -4,6 +4,7 @@ import com.magmaguy.elitemobs.config.customitems.CustomItemsConfigFields;
 import org.bukkit.Material;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class FishyCharmConfig extends CustomItemsConfigFields {
     public FishyCharmConfig() {
@@ -12,8 +13,8 @@ public class FishyCharmConfig extends CustomItemsConfigFields {
                 Material.COD,
                 "&bFishy Charm",
                 Arrays.asList("&aThere's just something not", "&aquite right with this one..."));
-        setEnchantments(Arrays.asList("VANISHING_CURSE,1"));
-        setPotionEffects(Arrays.asList("WATER_BREATHING,0,self,continuous"));
+        setEnchantments(List.of("VANISHING_CURSE,1"));
+        setPotionEffects(List.of("WATER_BREATHING,0,self,continuous"));
         setDropWeight("1");
     }
 }
