@@ -6,6 +6,7 @@ import com.magmaguy.elitemobs.utils.VersionChecker;
 import org.bukkit.Material;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class GoblinSlasherItem extends CustomItemsConfigFields {
     public GoblinSlasherItem() {
@@ -13,11 +14,11 @@ public class GoblinSlasherItem extends CustomItemsConfigFields {
                 true,
                 Material.GOLDEN_SWORD,
                 "&8Goblin Slasher",
-                Arrays.asList("&8A treasure among goblins!"));
+                List.of("&8A treasure among goblins!"));
         if (!VersionChecker.serverVersionOlderThan(16, 0))
             setMaterial(Material.NETHERITE_SWORD);
         setEnchantments(Arrays.asList("DAMAGE_ALL,1", "DAMAGE_UNDEAD,1", "DURABILITY,1", "KNOCKBACK,1", "LOOT_BONUS_MOBS,5"));
-        setPotionEffects(Arrays.asList("FAST_DIGGING,0,self,onHit"));
+        setPotionEffects(List.of("FAST_DIGGING,0,self,onHit"));
         setItemType(CustomItem.ItemType.UNIQUE);
     }
 }
