@@ -6,14 +6,15 @@ import com.magmaguy.elitemobs.utils.VersionChecker;
 import org.bukkit.Material;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class InvictusBootsConfig extends CustomItemsConfigFields {
-    public InvictusBootsConfig(){
+    public InvictusBootsConfig() {
         super("invictus_boots", true, Material.DIAMOND_BOOTS, "&4Invictus Boots", Arrays.asList("&2Awarded to the champions of the", "&2Wood League Arena!"));
         if (!VersionChecker.serverVersionOlderThan(16, 0))
             setMaterial(Material.NETHERITE_BOOTS);
         setEnchantments(Arrays.asList("PROTECTION_ENVIRONMENTAL,5", "PROTECTION_EXPLOSIONS,4", "PROTECTION_PROJECTILE,4", "MENDING,1", "DURABILITY,5"));
-        setPotionEffects(Arrays.asList("SPEED,0,self,continuous"));
+        setPotionEffects(List.of("SPEED,0,self,continuous"));
         setItemType(CustomItem.ItemType.UNIQUE);
         setLevel(50);
     }
