@@ -6,6 +6,7 @@ import com.magmaguy.elitemobs.utils.VersionChecker;
 import org.bukkit.Material;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class InvictusSwordConfig extends CustomItemsConfigFields {
     public InvictusSwordConfig() {
@@ -13,7 +14,7 @@ public class InvictusSwordConfig extends CustomItemsConfigFields {
         if (!VersionChecker.serverVersionOlderThan(16, 0))
             setMaterial(Material.NETHERITE_SWORD);
         setEnchantments(Arrays.asList("DAMAGE_ALL,5", "KNOCKBACK,2", "MENDING,1", "LIGHTNING,3", "SWEEPING_EDGE,1", "DURABILITY,5"));
-        setPotionEffects(Arrays.asList("WITHER,0,target,onHit"));
+        setPotionEffects(List.of("WITHER,0,target,onHit"));
         setItemType(CustomItem.ItemType.UNIQUE);
         setLevel(50);
     }
