@@ -5,6 +5,7 @@ import com.magmaguy.elitemobs.items.customitems.CustomItem;
 import org.bukkit.Material;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class WerewolfBoneItem extends CustomItemsConfigFields {
     public WerewolfBoneItem() {
@@ -13,7 +14,7 @@ public class WerewolfBoneItem extends CustomItemsConfigFields {
                 Material.BONE,
                 "&6Werewolf Bone",
                 Arrays.asList("&aHaving killed the alpha,", "&athis temporarily makes you!", "&athe wolves' new leader"));
-        setEnchantments(Arrays.asList("SUMMON_WOLF,1"));
+        setEnchantments(List.of("SUMMON_WOLF,1"));
         setItemType(CustomItem.ItemType.UNIQUE);
     }
 }
