@@ -10,6 +10,7 @@ import org.bukkit.Material;
 import org.bukkit.inventory.ItemStack;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class UnbinderMenuConfig extends MenusConfigFields {
 
@@ -68,7 +69,7 @@ public class UnbinderMenuConfig extends MenusConfigFields {
                 "eliteItemInputInformationButton",
                 ItemStackGenerator.generateItemStack(Material.GREEN_BANNER,
                         "&2Elite Item Input slots",
-                        Arrays.asList("&aThis slot is for your elite item!"), MetadataHandler.signatureID),
+                        List.of("&aThis slot is for your elite item!"), MetadataHandler.signatureID),
                 fileConfiguration);
         eliteItemInputInfoButton = ItemStackSerializer.deserialize("eliteItemInputInformationButton", fileConfiguration);
         eliteScrapInputInformationSlot = ConfigurationEngine.setInt(fileConfiguration, "unbindScrollInputInformationSlot", 22);
@@ -77,24 +78,24 @@ public class UnbinderMenuConfig extends MenusConfigFields {
                 "unbindScrollInputInformationButton",
                 ItemStackGenerator.generateItemStack(Material.GREEN_BANNER,
                         "&5Unbind Scroll &aInput slots",
-                        Arrays.asList("&aThis slot is for your &9Unbind Scroll&a!"), MetadataHandler.signatureID),
+                        List.of("&aThis slot is for your &9Unbind Scroll&a!"), MetadataHandler.signatureID),
                 fileConfiguration);
         eliteUnbindInputInfoButton = ItemStackSerializer.deserialize("unbindScrollInputInformationButton", fileConfiguration);
         outputInformationSlot = ConfigurationEngine.setInt(fileConfiguration, "informationOutputButtonSlot", 24);
         outputSlot = ConfigurationEngine.setInt(fileConfiguration, "outputSlot", 33);
         ItemStackSerializer.serialize("cancelButton", ItemStackGenerator.generateItemStack(Material.BARRIER,
-                "&4Cancel", Arrays.asList("&cCancel unbind!"), MetadataHandler.signatureID), fileConfiguration);
+                "&4Cancel", List.of("&cCancel unbind!"), MetadataHandler.signatureID), fileConfiguration);
         ItemStackSerializer.serialize(
                 "outputInformationButton",
                 ItemStackGenerator.generateItemStack(Material.RED_BANNER,
                         "&2Unbound Item Output slot",
-                        Arrays.asList("&aThis slot previews the result of your unbind!"), MetadataHandler.signatureID),
+                        List.of("&aThis slot previews the result of your unbind!"), MetadataHandler.signatureID),
                 fileConfiguration);
         outputInfoButton = ItemStackSerializer.deserialize("outputInformationButton", fileConfiguration);
         cancelButton = ItemStackSerializer.deserialize("cancelButton", fileConfiguration);
         cancelSlot = ConfigurationEngine.setInt(fileConfiguration, "cancelButtonSlot", 27);
         ItemStackSerializer.serialize("confirmButton", ItemStackGenerator.generateItemStack(Material.EMERALD,
-                "&2Confirm!", Arrays.asList("&aUnbind item!"), 31175), fileConfiguration);
+                "&2Confirm!", List.of("&aUnbind item!"), 31175), fileConfiguration);
         confirmButton = ItemStackSerializer.deserialize("confirmButton", fileConfiguration);
         confirmSlot = ConfigurationEngine.setInt(fileConfiguration, "confirmUnbindSlot", 35);
     }
