@@ -4,7 +4,7 @@ import com.magmaguy.elitemobs.config.npcs.NPCsConfigFields;
 import com.magmaguy.elitemobs.npcs.NPCInteractions;
 import org.bukkit.entity.Villager;
 
-import java.util.Arrays;
+import java.util.List;
 
 public class WoodLeagueArenaMasterConfig extends NPCsConfigFields {
     public WoodLeagueArenaMasterConfig() {
@@ -14,9 +14,9 @@ public class WoodLeagueArenaMasterConfig extends NPCsConfigFields {
                 "<Arena Master>",
                 Villager.Profession.ARMORER,
                 "em_adventurers_guild,240.5,92,270,-108,0",
-                Arrays.asList("Welcome to the\\nArena!"),
-                Arrays.asList("Prepared to face the arena?"),
-                Arrays.asList("Return with your shield, or on it!"),
+                List.of("Welcome to the\\nArena!"),
+                List.of("Prepared to face the arena?"),
+                List.of("Return with your shield, or on it!"),
                 true,
                 3,
                 NPCInteractions.NPCInteractionType.ARENA_MASTER);
